RESOLVED FIXED269945
AX: Assert crash in AXLogger streamAXCoreObject.
https://bugs.webkit.org/show_bug.cgi?id=269945
Summary AX: Assert crash in AXLogger streamAXCoreObject.
Andres Gonzalez
Reported 2024-02-22 14:20:25 PST
(lldb) bt * thread #8, name = 'com.apple.accessibility.secondary', stop reason = EXC_BAD_ACCESS (code=1, address=0xbbadbeef) * frame #0: 0x000000013e5dee48 JavaScriptCore`::WTFCrash() at Assertions.cpp:351:35 frame #1: 0x000000032914c784 WebCore`WTFCrashWithInfo((null)=1771, (null)="/Users/ag/s/web/OpenSource/Source/WebCore/accessibility/isolatedtree/AXIsolatedObject.cpp", (null)="virtual RenderObject *WebCore::AXIsolatedObject::renderer() const", (null)=2284) at Assertions.h:780:5 frame #2: 0x00000003294a98b8 WebCore`WebCore::AXIsolatedObject::renderer(this=0x0000000108185580) const at AXIsolatedObject.cpp:1771:5 frame #3: 0x0000000329355ee8 WebCore`WebCore::streamAXCoreObject(stream=0x000000016b753888, object=0x0000000108185580, options=0x000000016b75382f) at AXLogger.cpp:891:16 frame #4: 0x0000000329351fb0 WebCore`WebCore::operator<<(stream=0x000000016b753888, object=0x0000000108185580) at AXLogger.cpp:817:5 frame #5: 0x0000000329351ec8 WebCore`WebCore::AXLogger::log(this=0x000000016b753930, object=RefPtr<WebCore::AXCoreObject, WTF::RawPtrTraits<WebCore::AXCoreObject>, WTF::DefaultRefDerefTraits<WebCore::AXCoreObject> > @ 0x000000016b753918) at AXLogger.cpp:121:20
Attachments
Patch (1.38 KB, patch)
2024-02-22 14:24 PST, Andres Gonzalez
no flags
Radar WebKit Bug Importer
Comment 1 2024-02-22 14:20:36 PST
Andres Gonzalez
Comment 2 2024-02-22 14:24:05 PST
EWS
Comment 3 2024-02-22 16:16:51 PST
Committed 275208@main (3fca0e624c89): <https://commits.webkit.org/275208@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 470020 [details].
Note You need to log in before you can comment on or make changes to this bug.