AX: Assert crash in AXLogger streamAXCoreObject. https://bugs.webkit.org/show_bug.cgi?id=269945 <rdar://problem/123469688>

Reviewed by Chris Fleizach.

Should not call renderer() for isolated objects, only for AXObjects.

* Source/WebCore/accessibility/AXLogger.cpp:
(WebCore::streamAXCoreObject):

Canonical link: https://commits.webkit.org/275208@main